@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-01-21] RFC4880: added KeyRevocationHashV3()
 * [2018-01-16] RFC4880: increased buffer length for very large key sizes
 * [2018-01-16] RFC4880: added OctetsCompareConstantTime()
 * [2018-01-14] release 1.3.10 of LibTMCG
